# fima

./: .gitignore  LICENSE  README.md  default.nix  docker.nix  fima.cabal  prova.csv  prova.txt  release.nix  shell.nix
.github/workflows/: test.yml
exe/: Main.hs
src/: Main.hs
src/Data/Transaction/: Operations.hs  Transaction.hs  Type.hs
src/Date/: Date.hs
src/Transaction/: Transaction.hs
src/Ui/: CommandsPanel.hs  RenderName.hs  Transaction.hs  Ui.hs
test/Data/Transaction/: OperationsSpec.hs
test/Date/: DateSpec.hs
test/Transaction/: TransactionSpec.hs
