cabal-version: 2.4

name: fima

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis: Personal finance tracking service

-- TODO write description
-- description:

bug-reports: https://github.com/fedeizzo/fima/issues

license: ISC
license-file: LICENSE
author: Federico Izzo
maintainer: federico.izzo99@gmail.com
category: Finance
extra-source-files: README

common library-common
  build-depends:
    base ^>=4.13.0.0,
    cereal == 0.5.8.1,
    cereal-text == 0.1.0.2,
    bytestring == 0.10.10.1,
    brick == 0.52.1,
    text == 1.2.4.0,
    containers == 0.6.2.1,
    array == 0.5.4.0,
    mtl == 2.2.2,
    transformers == 0.5.6.2,
    unix == 2.7.2.2
  default-language: Haskell2010

library
  import: library-common
  hs-source-dirs: src
  exposed-modules:
    Transaction.Transaction,
    Date.Date

executable fima
  import: library-common
  main-is: Main.hs
  hs-source-dirs: exe
